--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,12 @@
 
 @font-face {
     font-family: Geist;
-    src: url('../node_modules/geist/dist/fonts/geist-mono/GeistMono-Medium.ttf');
+    src: url('../node_modules/geist/dist/fonts/geist-sans/Geist-Medium.ttf');
+
+}
+
+body{
+  font-family: 'Geist','roboto-mono', monospace;
 }
 
 
@@ -53,6 +58,72 @@
 #button:hover{
     transition: 150ms ease-in-out;
     background-color: var(--dark-accent);
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+
+.hero{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--background);
+  height: 85vh;
+  width: 100%;
+  padding: 8rem;
+
+}
+
+.background{
+  background: url("./assets/heroBG.jpg");
+  width: 50vw;
+  height: 60vh;
+  background-size: cover;
+  resize: both;
+  color: var(--background);
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-radius: 6px;
+  font-size: 1.3em;
+  padding: 2rem;
+}
+
+h1{
+  font-weight: bold;
+}
+
+.message{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--dark);
+  height: fit-content;
+  width: 100%;
+  padding: 8rem;
+}
+
+.messageInner{
+  width: 60vw;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.messageTitle{
+  color: var(--highlight);
+  font-weight: 500;
+}
+
+.messageText{
+  color: var(--background);
+  font-size: 18px;
+  line-height: 28px;
 }
 
 /* css reset */
