--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,9 @@ body{
   font-family: 'Geist','roboto-mono', monospace;
 }
 
+.content{
+  background-color: var(--background);
+}
 
 .header{
     display: flex;
@@ -67,6 +70,7 @@ body{
 
 }
 
+/* home section */
 
 .hero{
   display: flex;
@@ -109,7 +113,7 @@ h1{
 }
 
 .messageInner{
-  width: 60vw;
+  width: 48vw;
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -125,6 +129,81 @@ h1{
   font-size: 18px;
   line-height: 28px;
 }
+
+
+
+/* menu section */
+.menuBG{
+  background-color: var(--highlight);
+  width: 30vw;
+  margin: 12rem;
+  padding: 7rem 0rem;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 52px;
+  align-items: center;
+  justify-content: center;
+}
+
+.menuTitle{
+  font-weight: bold;
+  color: var(--background);
+  font-size: 32px;
+}
+
+.menuList{
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+  font-size: large;
+  color: var(--background);
+}
+
+
+
+/* about section */
+
+.top{
+  background-color: var(--background);
+  width: 48rem;
+  height: 30vh;
+  margin: 12rem 0 12rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.aboutMessage{
+  font-size: 18px;
+}
+
+.bottom{
+  width: 100%;
+  background-color: var(--dark);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bottomInner{
+  width: 48rem;
+  margin: 12rem 0 12rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  color: var(--background);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hnf{
+  font-size: 24px;
+}
+
+
+
 
 /* css reset */
 /*
